--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header {
   }
 
   #carrito {
-    font-size: 22px;
+    font-size: 20px;
     margin-left: 15px;
     border-radius: 50%;
     padding: 8px;
@@ -205,6 +205,9 @@ footer {
 
 
 /* producto*/
+section {
+  margin: 15px 20px;
+}
 
 .nav-productos {
   display: flex;
@@ -213,26 +216,26 @@ footer {
   margin: auto 5%;
 }
 
-.filtros-productos {
-  width: 30%;
-}
+
 
 #seccion-productos {
   width: 70%;
+
 }
 
 .card {
-  background-color: #eeeeee;
+  background-color: #FFFFFF;
   margin: 10px auto;
   border-radius: 10px;
   padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .card img {
-  width: 100px;
+  width: 120px;
   height: 100%;
   margin-right: 30px;
 }
@@ -250,14 +253,13 @@ footer {
 
 .infoProducto p {
   margin-bottom: 10px;
+  margin-left: 0;
   color: rgb(44, 158, 44);
 }
 
 .infoProducto button {
   margin-top: auto;
 }
-
-.infoProducto
 
 .comprar {
   border-radius: 5px;
@@ -267,7 +269,112 @@ footer {
   color: #FFFFFF;
   width: 100px;
   height: 30px;
+  transition: .3s ease;
+  
 }
+
+.comprar:hover{
+  margin-left: 3px;
+}
+
+
+/*categoria*/
+.filtros-productos {
+  width: 25%;
+  background-color: #FFFFFF;
+  margin-right: 15px;
+  border-radius: 5px;
+}
+
+/*carrito modal*/
+
+#carrito-modal {
+  border: none;
+  width: 70%;
+  top: 24%;
+  margin-left: 10%;
+  padding: 10px 5%;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.headerCarrito {
+ 
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin: 0;
+}
+
+.headerCarrito h3 {
+  margin-right: auto;
+}
+
+.headerCarrito button {
+  margin-left: 10px;
+  padding: 3px 5px;
+  border: 1px solid rgb(39, 39, 39);
+  border-radius: 5px;
+}
+
+.card-producto {
+  padding: 5px;
+  margin: 20px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 3px;
+  box-shadow: 0.3px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+
+.borrarProducto {
+  width: 30px;
+  height: 30px;
+  border: none;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+}
+
+.borrarProducto:active {
+  background-color: rgb(185, 185, 185);
+}
+
+.card-producto img {
+  width: 60px;
+  height: 100%;
+}
+
+.card-producto h3, p {
+  margin-left: 20px;
+}
+
+.card-producto button {
+  margin-left: auto;
+}
+
+.totalPagar-carrito{
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-carrito {
+  margin-bottom: 10px;
+  margin-top: 10px
+}
+
+.botonPagar {
+  margin-left: auto;
+}
+
+
+
+
+
+
+
+
 
 
 
