--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ header {
 
   ul {
     list-style: none;
-    margin: auto;
+  
   }
 
   header nav ul li {
@@ -299,17 +299,6 @@ section {
 
 
 
-
-
-
-/*categoria*/
-.filtros-productos {
-  width: 25%;
-  background-color: #FFFFFF;
-  margin-right: 15px;
-  border-radius: 5px;
-}
-
 /*carrito modal*/
 
 #carrito-modal {
@@ -320,6 +309,14 @@ section {
   padding: 10px 5%;
   background-color: #ffffff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+
+}
+
+#productos-carrito {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  max-height: 300px; /* Establece la altura máxima para el área de productos */
+  overflow-y: auto; /* Habilita el scroll vertical solo para el área de productos */
 }
 
 .headerCarrito {
@@ -349,7 +346,7 @@ section {
   justify-content: flex-end;
   align-items: center;
   border-radius: 3px;
-  box-shadow: 0.3px 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0.5px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -397,20 +394,21 @@ section {
   padding: 0;
 }
 
+
+
 /*filtros*/
-.filtros-productos {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-  border-radius: 0 16px 16px 0; 
-}
+
 
 .nav-filtros {
- width: 100%;
- height: 100%;
+  width: 25%;
+  height: 50%;
+  background-color: #FFFFFF;
+  margin-right: 15px;
+  border-radius: 5px;
 }
 
 .filtros-list {
   width: 100%;
-  height: 100%;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -420,16 +418,18 @@ section {
 }
 
 .list-item {
+  list-style: none;
   width: 100%;
   text-align: center;
   overflow: hidden;
+  margin-bottom: 10px;
 }
 
 .list-item-click {
   cursor: pointer;
 }
 
-.list-buttom{
+.list-button{
   display: flex;
   align-items: center;
   gap: 1em;
@@ -450,6 +450,7 @@ section {
   color: #303440;
   display: block;
   padding: 15px 0;
+  text-decoration: none;
 }
 
 .nav-link-inside:hover {
@@ -465,11 +466,15 @@ section {
 .list-show {
   width: 80%;
   margin-left: auto;
-  border-left: 2px solid #303440;
+  border-left: 0.8px solid #636877;
+  list-style: none;
   transition: height .4s;
   height: 0;
 }
 
+#all-generos {
+  background: #dfe0e0;
+}
 
 
 
