--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,16 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 10vw;
     background-color: #FFFFFF;
   }
 
   .header_top {
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content:space-evenly;
     align-items: center;
     height: 50%;
 
@@ -80,6 +82,7 @@ header {
   }
 
   #carrito {
+
     position: relative;
   }
   
@@ -104,21 +107,29 @@ header {
     background-color: rgb(185, 185, 185);
 }
 
+#icono {
+  margin-top: 5px;
+}
 
+#icono img {
+  
+  width: 100px;
+  height: 70px;
+}
  
 
 
   /* Buscador */
 
   .container_barra {
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 5px;
+    margin-bottom: 5px;
     position: relative;
   }
 
   .buscador_input {
     border-radius: 5px;
-    width: 18em;
+    width: 200px;
     padding: 0.8em;
     font-size: 16px;
     border: 1px solid #ccc;
@@ -293,6 +304,7 @@ section {
   transition: background-color 0.3s ease-out;
 }
 
+
 .comprar:active {
   background-color: rgb(23, 46, 110);
 }
@@ -394,6 +406,19 @@ section {
   padding: 0;
 }
 
+.botonPagar {
+  border: none;
+  background-color: rgb(46, 93, 223);
+  color: #FFFFFF;
+  font-weight: 500;
+  padding: 5px 10px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.botonPagar:active {
+  background-color: rgb(23, 46, 110);
+}
 
 
 /*filtros*/
@@ -404,6 +429,7 @@ section {
   height: 50%;
   background-color: #FFFFFF;
   margin-right: 15px;
+  margin-top: 15px;
   border-radius: 5px;
 }
 
