--- a/css/style.css
+++ b/css/style.css
@@ -266,9 +266,11 @@ section {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
+
 .card img {
+  padding: 0;
   width: 120px;
-  height: 100%;
+  height: 120px;
   margin-right: 30px;
 }
 
@@ -307,6 +309,10 @@ section {
 
 .comprar:active {
   background-color: rgb(23, 46, 110);
+}
+
+.card img:hover, .card h3:hover{
+  cursor: pointer;
 }
 
 
@@ -421,93 +427,6 @@ section {
 }
 
 
-/*filtros*/
-
-
-.nav-filtros {
-  width: 25%;
-  height: 50%;
-  background-color: #FFFFFF;
-  margin-right: 15px;
-  margin-top: 15px;
-  border-radius: 5px;
-}
-
-.filtros-list {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  border-radius: 0 16px 16px 0;
-  background: #FFFFFF;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); 
-}
-
-.list-item {
-  list-style: none;
-  width: 100%;
-  text-align: center;
-  overflow: hidden;
-  margin-bottom: 10px;
-}
-
-.list-item-click {
-  cursor: pointer;
-}
-
-.list-button{
-  display: flex;
-  align-items: center;
-  gap: 1em;
-  width: 70%;
-  margin: 0 auto;
-}
-
-.arrow .list-arrow{
-  transform: rotate(90deg);
-}
-
-.list-arrow {
-  margin-left: auto;
-  transition: transform .3s;
-}
-
-.nav-link {
-  color: #303440;
-  display: block;
-  padding: 15px 0;
-  text-decoration: none;
-}
-
-.nav-link-inside:hover {
-  background: #dfe0e0;
-}
-
-.nav-link-inside {
-  border-radius: 6px;
-  padding-left: 20px;
-  text-align: left;
-}
-
-.list-show {
-  width: 80%;
-  margin-left: auto;
-  border-left: 0.8px solid #636877;
-  list-style: none;
-  transition: height .4s;
-  height: 0;
-}
-
-#all-generos {
-  background: #dfe0e0;
-}
-
-
-
-
-.card img:hover, .card h3:hover{
-  cursor: pointer;
-}
 
 
 
