--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ header {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content:space-evenly;
+    justify-content:center;
     align-items: center;
     height: 50%;
 
