--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ a {
 footer {
     width: 100vw;
     height: 110px;
-    margin-top: 20px;
+    margin-top: auto;
     padding: 1em 0;
     background-color:  rgb(46, 93, 223);
 }
@@ -321,8 +321,15 @@ footer {
 }
 
 .contadorProductos button {
-  padding: 0;
+  padding: 4px;
+  border: none;
+  border-radius: 50%;
+  background: #ffffff;
 }
+.contadorProductos button:hover {
+  background: #e9e7e7;
+}
+
 
 .botonPagar {
   border: none;
@@ -336,6 +343,10 @@ footer {
 
 .botonPagar:active {
   background-color: rgb(23, 46, 110);
+}
+
+section {
+  margin-bottom: 20px;
 }
 
 
