--- a/css/style.css
+++ b/css/style.css
@@ -349,8 +349,25 @@ section {
   margin-bottom: 20px;
 }
 
+#logo {
+  display: flex;
+  justify-content: center;
 
+}
 
+.icono-pag{
+  margin-top: 5px;
+  width: 60px;
+  height: 100%;
+  object-fit: cover;
+}
+
+.nombre-pag {
+  width: 110px;
+  height: 100%;
+  margin-right: 10px;
+  margin-left: 5px;
+}
 
 
 
